--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p{
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav{
   display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 60px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  background-color: coral;
+}
+
+nav a{
+  margin:100px;
   color: white;
+  text-decoration: none;
+}
+nav .title{
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 3rem;
+  font-weight: 700;
+  color: red;
 }
 
-.App-link {
-  color: #61dafb;
+.list-wrapper{
+  width:90%;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list-wrapper .pokemon-item{
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  border:2px solid coral;
+  border-radius: 7px;
+  padding: 10px;
+}
+.list-wrapper a{
+  color: black;
+  text-decoration: none;
+}
+
+.poke {
+  width: 90%;
+  margin: auto;
+}
+.pokemon-wrapper{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.pokemon-wrapper .item{
+  width: 30%;
+}
+.search-wrapper{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+.pagination{
+  display: flex;
+  justify-content: space-between;
+  width: 500px;
+  margin: auto;
+  list-style-type: none;
 }
